# flapjackfeeder

./: Cargo.toml  Makefile  README.md
include/: config.h  pnp.h
include-rust/: neb_all.h
naemon/lib/: snprintf.h
src/: flapjackfeeder.c  flapjackruster.rs  lister.c  nagios.rs  test  test.c  wip.rs
